# Qt-projects

./: README.md  Read.me  block.h  food.cpp  game.cpp  game.h  glprogram.cpp  glprogram.h  main.cpp  openglwindow.cpp  sphere.pro
Clock/: clock.h  main.cpp  my_Clock.pro
Fractal3D/: Fractal3D.pro  Makefile  Makefile.Debug  Makefile.Release  glprogram.cpp  glprogram.h  main.cpp  openglwindow.cpp  openglwindow.h
assets/: compute_shader.glsl
doodle_jump/: game.cpp  game.h  main.cpp
flappy_block/: game.cpp  game.h  main.cpp
fractal/: complex.cpp  complex.h  fractal.cpp  fractal.h
jul/: GPU.cl  complex.cpp  complex.h  fractal.cpp  fractal.h  jul.pro  main.cpp  menu.cpp
julia_set/: README.md  glprogram.cpp  glprogram.h  julia_set.pro  main.cpp
jull/: glprogram.cpp  glprogram.h  jull.pro  main.cpp  openglwindow.cpp  openglwindow.h
my_Clock/: clock.cpp
opengl_project/: README.md  glprogram.cpp  glprogram.h  main.cpp  opengl_project.pro  openglwindow.h
snake/: block.cpp  block.h  food.cpp  food.h  game.cpp  game.h  main.cpp  snake.pro
snake_pro/: block.cpp  block.h  game.cpp  game.h  main.cpp  snake_pro.pro
task/task1/: CMakeLists.txt  main.cpp
task/task1/shader/: fragment_shader.glsl  vertex_shader.glsl
task/task2/: CMakeLists.txt  main.cpp
task/task2/shader/: fragment_shader.glsl  vertex_shader.glsl
task/task3/: CMakeLists.txt  main.cpp
task/task3/shader/: fragment_shader.glsl  vertex_shader.glsl
task/task4/: CMakeLists.txt  main.cpp
task/task4/shader/: fragment_shader.glsl  vertex_shader.glsl
tetris/: figure.cpp  figure.h  game.cpp  (+5 more)
(+34 files in other folders)
